--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -67,7 +67,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2024 TechCon. All rights reserved.</p>
+        <p>&copy; 2024 TechCon. All rights reserved. Copyright.</p>
     </footer>
 </body>
 
